--- a/my-vending-app/views/index.ejs
+++ b/my-vending-app/views/index.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>自動販売機</title>
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <h1>🥤 自販機アプリ</h1>
