--- a/my-vending-app/views/admin.ejs
+++ b/my-vending-app/views/admin.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>商品管理</title>
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <h1>🛠 商品管理（在庫補充）</h1>
