--- a/my-vending-app/views/sales.ejs
+++ b/my-vending-app/views/sales.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>売上管理</title>
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <h1>💰 売上履歴</h1>
